--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "build:watch":"webpack --watch --mode development"
+    "watch":"webpack --watch --mode development"
   },
   "author": "welsea",
   "license": "MIT",
